--- a/default.conf
+++ b/default.conf
@@ -6,10 +6,13 @@ server
     location /
         {
 
-            add_header "Access-Control-Allow-Origin" "*";
-            add_header 'Access-Control-Allow-Credentials' 'true' always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
-            add_header 'Access-Control-Allow-Headers' 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
+            if ($request_method = 'POST') {
+                add_header "Access-Control-Allow-Origin" "*";
+                add_header 'Access-Control-Allow-Credentials' 'true' always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+                add_header 'Access-Control-Allow-Headers' 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
+                add_header 'Access-Control-Expose-Headers' 'Accept,Accept-Encoding,Authorization,Content-Length,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;      
+            }
 
 
             if ($request_method = 'OPTIONS') {
