--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.15",
     "@harnessio/ff-javascript-client-sdk": "^1.4.7",
     "@tensorflow-models/handpose": "^0.0.7",
     "@tensorflow/tfjs": "^3.8.0",
@@ -16,6 +19,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "react-webcam": "^5.2.4",
+    "styled-components": "^5.3.1",
     "upgrade": "^1.1.0",
     "web-vitals": "^1.1.2"
   },
