--- a/manifests/dev/configmap.yaml
+++ b/manifests/dev/configmap.yaml
@@ -4,6 +4,5 @@ metadata:
   name: gesturerecognition-conf
 data:
   harness.debug: 'true'
-  harness.target: 'Harness'
-  harness.identifier: 'Harness'
-  harness.email_attr: 'martin.ansong@harness.io'
+  config.js: |
+    window.REACT_APP_API_KEY='ad65462d-f330-4ae2-89f3-3b969736a53a'
