--- a/manifests/dev/resources.yaml
+++ b/manifests/dev/resources.yaml
@@ -1,9 +1,11 @@
 apiVersion: v1
-kind: Secret
+kind: ConfigMap
 metadata:
-  name: gesturerecognition-secrets
+  name: gesturerecognition-conf
 data:
-  api.key: OWUwMDdmOTUtYTZhMS00ZWU5LWE1MmMtNTYxMzAyZTE4NTkw
+  harness.debug: 'true'
+  config.js: |
+    window.REACT_APP_API_KEY='ad65462d-f330-4ae2-89f3-3b969736a53a';
 
 ---
 
@@ -43,28 +45,20 @@ spec:
             initialDelaySeconds: 10
             periodSeconds: 300
           env:
-            - name: REACT_APP_API_KEY
-              value: "d3544727-c59b-4e90-8fa2-c39c926b6124"
-            - name: REACT_APP_HARNESS_IDENTIFIER
-              valueFrom:
-                configMapKeyRef:
-                  name: gesturerecognition-conf
-                  key: harness.identifier
-            - name: REACT_APP_HARNESS_TARGET_NAME
-              valueFrom:
-                configMapKeyRef:
-                  name: gesturerecognition-conf
-                  key: harness.target
-            - name: REACT_APP_HARNESS_EMAIL_ATTR
-              valueFrom:
-                configMapKeyRef:
-                  name: gesturerecognition-conf
-                  key: harness.email_attr
             - name: REACT_APP_HARNESS_DEBUG
               valueFrom:
                 configMapKeyRef:
                   name: gesturerecognition-conf
                   key: harness.debug
+          volumeMounts:
+            - name: config
+              mountPath: /usr/share/nginx/html/config.js
+              subPath: config.js
+              readOnly: true
+      volumes:
+        - name: config
+          configMap:
+            name: gesturerecognition-conf
 
 ---
 
