--- a/manifests/dev/ingress.yaml
+++ b/manifests/dev/ingress.yaml
@@ -30,3 +30,10 @@ spec:
             name: gesturerecognition-svc
             port:
               number: 80
+      - path: /gesture-recognition
+        pathType: Prefix
+        backend:
+          service:
+            name: gesturerecognition-svc
+            port:
+              number: 80
