--- a/default.conf
+++ b/default.conf
@@ -3,6 +3,11 @@ server
     listen       80;
     server_name  localhost;
 
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /usr/share/nginx/html;
+    }
+
     location /
         {
 
@@ -24,9 +29,10 @@ server
             }
 
             root   /usr/share/nginx/html;
-            include /etc/nginx/mime.types;
-            
+            try_files $uri $uri/ /index.html;
             index  index.html index.htm;
+
+            include /etc/nginx/mime.types;
             error_log /var/log/nginx/error.log;
             access_log /var/log/nginx/access.log;
 
