--- a/harness/.harness/reactJS.yaml
+++ b/harness/.harness/reactJS.yaml
@@ -26,7 +26,7 @@ pipeline:
                       type: KubernetesDirect
                       spec:
                           connectorRef: mansonggke
-                          namespace: harness-delegate
+                          namespace: harness-build
                   execution:
                       steps:
                           - step:
