--- a/harness/.harness/mansonggke.yaml
+++ b/harness/.harness/mansonggke.yaml
@@ -9,4 +9,4 @@ connector:
     credential:
       type: InheritFromDelegate
     delegateSelectors:
-    - mansong-cogenial-octo-funicular
+    - mansong-gke
