--- a/harness/.harness/reactJS.yaml
+++ b/harness/.harness/reactJS.yaml
@@ -186,6 +186,21 @@ pipeline:
                                 spec:
                                     skipDryRun: false
                           - step:
+                                type: ShellScript
+                                name: Ping
+                                identifier: Ping
+                                spec:
+                                    shell: Bash
+                                    onDelegate: true
+                                    source:
+                                        type: Inline
+                                        spec:
+                                            script: ping https://mansong.ff-demo.co.uk
+                                    environmentVariables: []
+                                    outputVariables: []
+                                    executionTarget: {}
+                                timeout: 10m
+                          - step:
                                 type: Verify
                                 name: Verify
                                 identifier: Verify
