--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^12.8.3",
     "detect-browser": "^5.2.0",
     "fingerpose": "^0.0.2",
+    "jest-junit": "^12.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
@@ -26,7 +27,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest",
+    "test": "jest --coverage --coverageDirectory=jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -38,6 +39,21 @@
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "jest": "^26.6.0"
+  },
+  "jest": {
+    "verbose": true,
+    "coverageReporters": [
+      "text",
+      "json"
+    ],
+    "reporters": [
+      "default",
+      "jest-junit"
+    ]
+  },
+  "jest-junit": {
+    "output": "junit.xml",
+    "usePathForSuiteName": "true"
   },
   "browserslist": {
     "production": [
