--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "verbose": true,
     "coverageReporters": [
       "text",
-      "json"
+      "json",
+      "cobertura"
     ],
     "reporters": [
       "default",
