--- a/harness/.harness/reactJS.yaml
+++ b/harness/.harness/reactJS.yaml
@@ -83,6 +83,12 @@ pipeline:
                                     image: <+Build_and_Publish.variables.node_version>
                                     command: npm test
                                     privileged: false
+                                    reports:
+                                        type: JUnit
+                                        spec:
+                                            paths:
+                                                - "**/*.xml"
+                                                - "*.xml"
                           - step:
                                 type: Run
                                 name: Build
