--- a/harness/.harness/newrelic.yaml
+++ b/harness/.harness/newrelic.yaml
@@ -7,6 +7,6 @@ connector:
   spec:
     newRelicAccountId: 3295531
     url: https://api.eu.newrelic.com/
-    apiKeyRef: mansongNewRelic
+    apiKeyRef: newrelicApiKey
     delegateSelectors:
     - mansong-gke
