--- a/harness/.harness/newrelic.yaml
+++ b/harness/.harness/newrelic.yaml
@@ -6,7 +6,7 @@ connector:
   type: NewRelic
   spec:
     newRelicAccountId: 3295531
-    url: https://api.eu.newrelic.com/graphql
+    url: https://insights-api.newrelic.com/
     apiKeyRef: newrelicApiKey
     delegateSelectors:
     - mansong-gke
