Update pipeline reactJS

--- a/harness/.harness/reactJS.yaml
+++ b/harness/.harness/reactJS.yaml
@@ -220,6 +220,7 @@ pipeline:
                                               type: Inline
                                               spec:
                                                   script: |
+                                                      sudo Xvfb :10 -ac
                                                       export DISPLAY=:5
 
                                                       https://github.com/mansong1/improved-happiness.git
