--- a/harness/.harness/reactJS.yaml
+++ b/harness/.harness/reactJS.yaml
@@ -220,8 +220,10 @@ pipeline:
                                               type: Inline
                                               spec:
                                                   script: |
-                                                      git clone https://github.com/mansong1/improved-happiness.git
-                                                      cd selenium
+                                                      rm -rf /tmp/reactjs | true
+                                                      mkdir -p /tmp/reactjs
+                                                      git clone https://github.com/mansong1/improved-happiness.git /tmp/reactjs
+                                                      cd /tmp/reactjs/selenium
 
                                                       echo "Running Selenium Tests"
                                                       python3 loginTest.py
