--- a/harness/.harness/reactJS.yaml
+++ b/harness/.harness/reactJS.yaml
@@ -231,6 +231,38 @@ pipeline:
                                           outputVariables: []
                                           executionTarget: {}
                                       timeout: 10m
+                                - step:
+                                      type: Verify
+                                      name: ContinuousVerification
+                                      identifier: ContinuousVerification
+                                      spec:
+                                          type: Rolling
+                                          spec:
+                                              sensitivity: HIGH
+                                              duration: 5m
+                                              deploymentTag: latest
+                                      timeout: 2h
+                                      failureStrategies:
+                                          - onFailure:
+                                                errors:
+                                                    - Verification
+                                                action:
+                                                    type: ManualIntervention
+                                                    spec:
+                                                        timeout: 2h
+                                                        onTimeout:
+                                                            action:
+                                                                type: StageRollback
+                                          - onFailure:
+                                                errors:
+                                                    - Unknown
+                                                action:
+                                                    type: ManualIntervention
+                                                    spec:
+                                                        timeout: 2h
+                                                        onTimeout:
+                                                            action:
+                                                                type: Ignore
                       rollbackSteps:
                           - step:
                                 name: Rollback Rollout Deployment
