Parallelise Cache rebuild and docker push

--- a/harness/.harness/reactJS.yaml
+++ b/harness/.harness/reactJS.yaml
@@ -121,35 +121,36 @@ pipeline:
                                         limits:
                                             memory: 2Gi
                                             cpu: "1"
-                          - step:
-                                type: SaveCacheS3
-                                name: Rebuild Cache
-                                identifier: Rebuild_Cache
-                                spec:
-                                    connectorRef: mansongaws
-                                    region: eu-west-2
-                                    bucket: mansong-npm
-                                    key: gesturerecognition
-                                    sourcePaths:
-                                        - node_modules
-                                    archiveFormat: Tar
-                          - step:
-                                type: BuildAndPushDockerRegistry
-                                name: Push Docker Image
-                                identifier: Push_Docker_Image
-                                spec:
-                                    connectorRef: mansongdockerhub
-                                    repo: mansong/gesturerecognition
-                                    tags:
-                                        - <+pipeline.sequenceId>
-                                        - latest
-                                    dockerfile: Dockerfile.prod
-                                    context: ./
-                                    optimize: true
-                                    resources:
-                                        limits:
-                                            memory: 2Gi
-                                            cpu: "1"
+                          - parallel:
+                                - step:
+                                      type: SaveCacheS3
+                                      name: Rebuild Cache
+                                      identifier: Rebuild_Cache
+                                      spec:
+                                          connectorRef: mansongaws
+                                          region: eu-west-2
+                                          bucket: mansong-npm
+                                          key: gesturerecognition
+                                          sourcePaths:
+                                              - node_modules
+                                          archiveFormat: Tar
+                                - step:
+                                      type: BuildAndPushDockerRegistry
+                                      name: Push Docker Image
+                                      identifier: Push_Docker_Image
+                                      spec:
+                                          connectorRef: mansongdockerhub
+                                          repo: mansong/gesturerecognition
+                                          tags:
+                                              - <+pipeline.sequenceId>
+                                              - latest
+                                          dockerfile: Dockerfile.prod
+                                          context: ./
+                                          optimize: true
+                                          resources:
+                                              limits:
+                                                  memory: 2Gi
+                                                  cpu: "1"
                           - step:
                                 type: Run
                                 name: Scan Docker Image
