Update pipeline reactJS

--- a/harness/.harness/reactJS.yaml
+++ b/harness/.harness/reactJS.yaml
@@ -248,7 +248,7 @@ pipeline:
                                 type: K8sRollingDeploy
                                 timeout: 10m
                                 spec:
-                                    skipDryRun: false
+                                    skipDryRun: true
                           - parallel:
                                 - step:
                                       type: Http
