--- a/harness/.harness/reactJS.yaml
+++ b/harness/.harness/reactJS.yaml
@@ -260,6 +260,36 @@ pipeline:
                                               - mansong-gke
                                       timeout: 10m
                                       failureStrategies: []
+                                - step:
+                                      type: ShellScript
+                                      name: Regression
+                                      identifier: Regression
+                                      spec:
+                                          shell: Bash
+                                          onDelegate: true
+                                          source:
+                                              type: Inline
+                                              spec:
+                                                  script: echo "Regressions Tests"
+                                          environmentVariables: []
+                                          outputVariables: []
+                                          executionTarget: {}
+                                      timeout: 10m
+                          - step:
+                                type: ShellScript
+                                name: Jmeter
+                                identifier: Jmeter
+                                spec:
+                                    shell: Bash
+                                    onDelegate: true
+                                    source:
+                                        type: Inline
+                                        spec:
+                                            script: echo "Jmeter"
+                                    environmentVariables: []
+                                    outputVariables: []
+                                    executionTarget: {}
+                                timeout: 10m
                       rollbackSteps:
                           - step:
                                 name: Rollback Rollout Deployment
